# voice-detoxification

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMPLETE_INTEGRATION.md  COMPLETION_REPORT.md  GETTING_STARTED.md  README.md  demo.sh  desktop.bat  detox.bat  test.sh
app/cli/: main.cpp
app/desktop/: main.cpp
scripts/: advanced_detoxify.py  evaluate_detox_accuracy.py  piper_tts.py  requirements.txt  run_simple.ps1
src/audio/: audio_decoder.cpp  audio_decoder.h  voice_analyzer.cpp  voice_analyzer.h  wav_writer.cpp  wav_writer.h
src/common/: logger.cpp  logger.h
src/nlp/: text_detoxifier.cpp  text_detoxifier.h  toxicity_detector.cpp  toxicity_detector.h
src/stt/: whisper_engine.cpp  whisper_engine.h
src/tts/: piper_engine.cpp  piper_engine.h
tests/: nlp_detox_tests.cpp
